fix(style/list): replace `float` to `text-align` in footer part (#619)

--- a/ui/packages/artalk/src/style/list.scss
+++ b/ui/packages/artalk/src/style/list.scss
@@ -132,7 +132,7 @@
   }
 
   & > .atk-list-footer {
-    float: right;
+    text-align: right;
 
     @media only screen and (max-width: 768px) {
       float: initial;
